--- a/index.html
+++ b/index.html
@@ -16,11 +16,21 @@
         <section class="row text-center p-3">
             <div class="col-12">
                 <h1 class="fw-bold pixel-color">Pixel Penguin</h1>
+                <section class="row">
+                    <div id="mine" class="col-12">
+                        <img class="penguin-img" onclick="mine()" src="/assets/pixel-penguin-img.png"
+                            alt="8bit penguin">
+                    </div>
             </div>
         </section>
     </header>
     <main class="container-fluid">
-        <section id="mine"></section>
+        <section class="row">
+            <div id="cheese-count" class="col-4 card rounded background text-light">
+                <h3><i class="mdi mdi-cheese"></i></h3>
+            </div>
+        </section>
+
     </main>
 
 
