working on upgrades

--- a/index.html
+++ b/index.html
@@ -24,12 +24,48 @@
             </div>
         </section>
     </header>
+    <!-- Cheese Upgrade -->
     <main class="container-fluid">
-        <section class="row">
+        <section class="row justify-content-center">
             <div id="cheese-count" class="col-4 card rounded background text-light">
                 <h3><i class="mdi mdi-cheese"></i></h3>
             </div>
         </section>
+
+        <!-- Ice Axe Click Upgrade -->
+        <div class="container-fluid background-light rounded">
+            <section class="row ms-1">
+                <div class="col-3 card rounded background text-light">
+                    <button id="iceAxe" class="btn btn-outline-light p-2"><i class="mdi mdi-cheese me-2 p-2">ice
+                            axe</i></button>
+                </div>
+            </section>
+
+            <!-- Flamethrower Upgrade -->
+            <section class="row ms-1">
+                <div class="col-3 card rounded background text-light">
+                    <button id="flameThrower" class="btn btn-outline-light p-2"><i
+                            class="mdi mdi-cheese me-2 p-2">flame</i></button>
+                </div>
+            </section>
+
+            <!-- Igloo Automatic Upgrade -->
+            <div class="container-fluid">
+                <section class="row">
+                    <div class="col-3 card rounded background text-light">
+                        <button id="igloo-count" class="btn btn-outline-light p-2"><i
+                                class="mdi mdi-cheese me-2 p-2">igloo
+                            </i></button>
+                    </div>
+                </section>
+
+                <!-- Blizzard Automatic Upgrade -->
+                <section class="row">
+                    <div class="col-3 card rounded background text-light">
+                        <button id="blizzard-count" class="btn btn-outline-light p-2"><i
+                                class="mdi mdi-cheese me-2 p-2">blizz</i></button>
+                    </div>
+                </section>
 
     </main>
 
