ice axe updates yay

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         <div class="container-fluid background-light rounded">
             <section class="row ms-1">
                 <div class="col-3 card rounded background text-light">
-                    <button id="iceAxe" class="btn btn-outline-light p-2"><i class="mdi mdi-cheese me-2 p-2">ice
+                    <button id="iceAxe" class="btn btn-outline-light p-2" onclick="buyIceAxe()"><i
+                            class="mdi mdi-cheese me-2 p-2">ice
                             axe</i></button>
                 </div>
             </section>
