--- a/index.html
+++ b/index.html
@@ -25,63 +25,110 @@
                             alt="8bit penguin">
                     </div>
             </div>
+            <!-- Fish Upgrade/ Collect-->
             <section class="row justify-content-center">
+                <div class="col-md-2 card rounded background text-light">
+                    <i class="mdi mdi-cursor-default-click-outline "></i>
+                </div>
                 <div id="fish-count" class="col-4 card rounded background text-light">
                     <h3><i class="mdi mdi-fish"></i></h3>
+                </div>
+                <div class="col-md-2 card rounded background text-light">
+                    <i class="mdi mdi-timer-outline  "></i>
                 </div>
             </section>
         </section>
     </header>
-    <!-- Fish Upgrade -->
     <main class="container-fluid background-light rounded shadow p-5">
-
         <!-- Ice Axe Click Upgrade -->
-        <section class="row ms-1">
-            <div class="col-3 card rounded background text-light mb-3 p-2 shadow">
-                <button id="iceAxe" class="btn btn-outline-light p-2" onclick="buyIceAxe()"><i
-                        class="mdi mdi-fish me-2 p-2"></i></button>
-            </div>
-            <div class="col-3 d-flex align-items-center">
-                <h5 class="pt-2">Ice Axe</h5>
-            </div>
+        <div class="inner-container card rounded shadow inner-bg m-3 p-5">
+            <section class="row ms-5">
+                <div class="col-md-3 card rounded background text-light mb-3 p-2 shadow">
+                    <button id="iceAxe" class="btn btn-outline-light p-2" onclick="buyIceAxe()"><i
+                            class="mdi mdi-fish me-2 p-2"></i></button>
+                </div>
+                <div class="col-md-3 d-flex align-items-center">
+                    <h5 class="pt-2">Ice Axe</h5>
+                </div>
 
-            <!-- Automatic Igloo -->
-            <div class="col-3 card rounded background text-light mb-3 p-2 shadow">
-                <button id="igloo" class="btn btn-outline-light p-2"><i class="mdi mdi-fish me-2 p-2">
-                    </i></button>
-            </div>
-            <div class="col-3 d-flex align-items-center">
-                <h5 class="pt-2">Igloo</h5>
-            </div>
-        </section>
+                <!-- Automatic Igloo -->
+                <div class="col-md-3 card rounded background text-light mb-3 p-2 shadow">
+                    <button id="igloo" class="btn btn-outline-light p-2"><i class="mdi mdi-fish me-2 p-2">
+                        </i></button>
+                </div>
+                <div class="col-md-3 d-flex align-items-center">
+                    <h5 class="pt-2">Igloo</h5>
+                </div>
+            </section>
 
-        <!-- Flamethrower Upgrade -->
-        <section class="row ms-1">
-            <div class="col-3 card rounded background text-light mb-3 p-2 shadow">
-                <button id="flameThrower" class="btn btn-outline-light p-2" onclick="buyFlamethrower()"><i
-                        class="mdi mdi-fish me-2 p-2"></i></button>
-            </div>
-            <div class="col-3 d-flex align-items-center">
-                <h5 class="pt-2">Flamethrower</h5>
-            </div>
+            <!-- Flamethrower Upgrade -->
+            <section class="row ms-5">
+                <div class="col-md-3 card rounded background text-light mb-3 p-2 shadow">
+                    <button id="flameThrower" class="btn btn-outline-light p-2" onclick="buyFlamethrower()"><i
+                            class="mdi mdi-fish me-2 p-2"></i></button>
+                </div>
+                <div class="col-md-3 d-flex align-items-center">
+                    <h5 class="pt-2">Flamethrower</h5>
+                </div>
 
-            <!-- Automatic Blizzard  -->
-            <div class="col-3 card rounded background text-light mb-3 p-2 shadow">
-                <button id="blizzard" class="btn btn-outline-light p-2"><i class="mdi mdi-fish me-2 p-2"></i></button>
-            </div>
-            <div class="col-3 d-flex align-items-center">
-                <h5 class="pt-2">Blizzard</h5>
-            </div>
-        </section>
+                <!-- Automatic Blizzard  -->
+                <div class="col-md-3 card rounded background text-light mb-3 p-2 shadow">
+                    <button id="blizzard" class="btn btn-outline-light p-2"><i
+                            class="mdi mdi-fish me-2 p-2"></i></button>
+                </div>
+                <div class="col-md-3 d-flex align-items-center">
+                    <h5 class="pt-2">Blizzard</h5>
+                </div>
+            </section>
+        </div>
 
+        <!-- SECTION Collect -->
+        <div class="inner-container card rounded shadow inner-bg m-3 p-5">
+            <section class="row ms-5">
+                <div class="col-md-3 card rounded background text-light mb-3 p-2 shadow">
+                    <button id="iceAxe" class="btn btn-outline-light p-2" onclick="buyIceAxe()"><i
+                            class="mdi mdi-fish me-2 p-2"></i></button>
+                </div>
+                <div class="col-md-3 d-flex align-items-center">
+                    <h5 class="pt-2">Ice Axe</h5>
+                </div>
 
+                <!-- Automatic Igloo -->
+                <div class="col-md-3 card rounded background text-light mb-3 p-2 shadow">
+                    <button id="igloo" class="btn btn-outline-light p-2"><i class="mdi mdi-fish me-2 p-2">
+                        </i></button>
+                </div>
+                <div class="col-md-3 d-flex align-items-center">
+                    <h5 class="pt-2">Igloo</h5>
+                </div>
+            </section>
+
+            <!-- Flamethrower Upgrade -->
+            <section class="row ms-5">
+                <div class="col-md-3 card rounded background text-light mb-3 p-2 shadow">
+                    <button id="flameThrower" class="btn btn-outline-light p-2" onclick="buyFlamethrower()"><i
+                            class="mdi mdi-fish me-2 p-2"></i></button>
+                </div>
+                <div class="col-md-3 d-flex align-items-center">
+                    <h5 class="pt-2">Flamethrower</h5>
+                </div>
+
+                <!-- Automatic Blizzard  -->
+                <div class="col-md-3 card rounded background text-light mb-3 p-2 shadow">
+                    <button id="blizzard" class="btn btn-outline-light p-2"><i
+                            class="mdi mdi-fish me-2 p-2"></i></button>
+                </div>
+                <div class="col-md-3 d-flex align-items-center">
+                    <h5 class="pt-2">Blizzard</h5>
+                </div>
+            </section>
+        </div>
     </main>
-
-
-
-
-
-
+    <footer class="container-fluid footer-bg p-5">
+        <section class="row">
+            <h4 class="fw-bold text-center">harold the penguin thanks you for all the fish!</h4>
+        </section>
+    </footer>
 
     <script src="app.js" defer></script>
 </body>
