--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <header class="container-fluid">
-        <section class="row text-center p-3">
+        <section class="row text-center m-3 p-3">
             <div class="col-12">
                 <h1 class="fw-bold pixel-color p-2 shadow rounded">Pixel Penguin</h1>
                 <section class="row">
@@ -39,7 +39,7 @@
             </section>
         </section>
     </header>
-    <main class="container-fluid background-light rounded shadow p-5">
+    <main class="container-fluid background-light p-5">
         <!-- Ice Axe Click Upgrade -->
         <div class="inner-container card rounded shadow inner-bg m-3 p-5">
             <section class="row ms-5">
@@ -124,7 +124,7 @@
             </section>
         </div>
     </main>
-    <footer class="container-fluid footer-bg p-5">
+    <footer class="container-fluid footer-bg p-5 mt-5">
         <section class="row">
             <h4 class="fw-bold text-center">harold the penguin thanks you for all the fish!</h4>
         </section>
