--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
         </section>
     </header>
     <main class="container-fluid background-light p-5">
+        <div class="h3 d-flex padding-start">
+            <h6 class="fw-bold">CLICK UPGRADES</h6>
+            <div class="h3 padding-start">
+                <h6 class="fw-bold">AUTOMATIC UPGRADES</h6>
+            </div>
+        </div>
         <!-- Ice Axe Click Upgrade -->
         <div class="inner-container card rounded shadow inner-bg m-3 p-5">
             <section class="row ms-5">
@@ -52,6 +58,7 @@
                 </div>
 
                 <!-- Automatic Igloo -->
+
                 <div class="col-md-3 card rounded background text-light mb-3 p-2 shadow">
                     <button id="igloo" class="btn btn-outline-light p-2"><i class="mdi mdi-fish me-2 p-2">
                         </i></button>
@@ -83,47 +90,22 @@
         </div>
 
         <!-- SECTION Collect -->
+        <div class="h3 d-flex padding-start-stats pt-5">
+            <h6 class="fw-bold">CLICK STATS</h6>
+            <div class="h3 padding-start">
+                <h6 class="fw-bold">AUTOMATIC STATS</h6>
+            </div>
+        </div>
         <div class="inner-container card rounded shadow inner-bg m-3 p-5">
-            <section class="row ms-5">
-                <div class="col-md-3 card rounded background text-light mb-3 p-2 shadow">
-                    <button id="iceAxe" class="btn btn-outline-light p-2" onclick="buyIceAxe()"><i
-                            class="mdi mdi-fish me-2 p-2"></i></button>
-                </div>
-                <div class="col-md-3 d-flex align-items-center">
-                    <h5 class="pt-2">Ice Axe</h5>
-                </div>
 
-                <!-- Automatic Igloo -->
-                <div class="col-md-3 card rounded background text-light mb-3 p-2 shadow">
-                    <button id="igloo" class="btn btn-outline-light p-2"><i class="mdi mdi-fish me-2 p-2">
-                        </i></button>
-                </div>
-                <div class="col-md-3 d-flex align-items-center">
-                    <h5 class="pt-2">Igloo</h5>
-                </div>
-            </section>
 
-            <!-- Flamethrower Upgrade -->
-            <section class="row ms-5">
-                <div class="col-md-3 card rounded background text-light mb-3 p-2 shadow">
-                    <button id="flameThrower" class="btn btn-outline-light p-2" onclick="buyFlamethrower()"><i
-                            class="mdi mdi-fish me-2 p-2"></i></button>
-                </div>
-                <div class="col-md-3 d-flex align-items-center">
-                    <h5 class="pt-2">Flamethrower</h5>
-                </div>
 
-                <!-- Automatic Blizzard  -->
-                <div class="col-md-3 card rounded background text-light mb-3 p-2 shadow">
-                    <button id="blizzard" class="btn btn-outline-light p-2"><i
-                            class="mdi mdi-fish me-2 p-2"></i></button>
-                </div>
-                <div class="col-md-3 d-flex align-items-center">
-                    <h5 class="pt-2">Blizzard</h5>
-                </div>
-            </section>
+
         </div>
     </main>
+
+
+    <!-- SECTION Footer -->
     <footer class="container-fluid footer-bg p-5 mt-5">
         <section class="row">
             <h4 class="fw-bold text-center">harold the penguin thanks you for all the fish!</h4>
