--- a/index.html
+++ b/index.html
@@ -157,17 +157,16 @@
 </html>
 
 
-
-
-
 <!-- Collect Ice Axe -->
 <div class="inner-container card rounded shadow inner-bg m-3 p-5">
     <section class="row ms-5">
         <div class="col-md-3 card rounded background text-light mb-3 p-2 shadow">
             <i class="mdi mdi-arrow-up-thick me-2 p-2"> Ice Axe</i>
         </div>
-        <div class="col-md-4 d-flex align-items-center justify-content-end pe-2">
-            <div id="iceAxeQuantity"></div>
+        <div class="col-md-4 d-flex align-items-center justify-content-end">
+            <div id="iceAxeQuantity">
+                <div id="iceAxeQuantity"></div>
+            </div>
         </div>
 
         <!-- Collect Igloo -->
@@ -175,7 +174,7 @@
         <div class="col-md-3 card rounded background text-light mb-3 p-2 shadow">
             <i class="mdi mdi-timer-plus-outline me-2 p-2"> Igloo</i>
         </div>
-        <div class="col-md-2 d-flex align-items-center justify-content-end pe-2">
+        <div class="col-md-2 d-flex align-items-center justify-content-end">
             <div id="iglooQuantity"></div>
         </div>
     </section>
@@ -185,7 +184,7 @@
         <div class="col-md-3 card rounded background text-light mb-3 p-2 shadow">
             <i class="mdi mdi-arrow-up-thick me-2 p-2"> Flamethrower</i>
         </div>
-        <div class="col-md-4 d-flex align-items-center justify-content-end pe-2">
+        <div class="col-md-4 d-flex align-items-center justify-content-end">
             <div id="flamethrowerQuantity"></div>
         </div>
 
@@ -194,11 +193,12 @@
         <div class="col-md-3 card rounded background text-light mb-3 p-2 shadow">
             <i class="mdi mdi-timer-plus-outline me-2 p-2"> Blizzard</i>
         </div>
-        <div class="col-md-2 d-flex align-items-center justify-content-end pe-2">
+        <div class="col-md-2 d-flex align-items-center justify-content-end">
             <div id="blizzardQuantity"></div>
         </div>
     </section>
 </div>
+
 
 </section>
 </div>
